--- a/final/RWD.html
+++ b/final/RWD.html
@@ -63,7 +63,7 @@ $(function(){
                     </a>
                     <ul class="exerciseList">
                         <li class="exerciseForList">
-                            <a href="http://127.0.0.1:5500/Final/final/index.html">首頁</a>
+                            <a href="http://127.0.0.1:5500/Final/final/RWD.html">首頁</a>
                         </li>
                         <li class="exerciseForList">
                             <a href="http://127.0.0.1:5500/Final/final/RWD2.html">主要角色</a>
