--- a/final/RWD3.html
+++ b/final/RWD3.html
@@ -116,13 +116,13 @@ $(function(){
                 </a>
                 <ul class="exerciseList">
                     <li class="exerciseForList">
-                        <a href="http://127.0.0.1:5500/Final/final/index.html">首頁</a>
+                        <a href="https://g2220659342.github.io/B11156041.github.io/final/RWD.html">首頁</a>
                     </li>
                     <li class="exerciseForList">
-                        <a href="http://127.0.0.1:5500/Final/final/RWD2.html">主要角色</a>
+                        <a href="https://g2220659342.github.io/B11156041.github.io/final/RWD2.html">主要角色</a>
                     </li>
                     <li class="exerciseForList">
-                        <a href="http://127.0.0.1:5500/Final/final/RWD3.html">資料來源</a>
+                        <a href="https://g2220659342.github.io/B11156041.github.io/final/RWD3.html">資料來源</a>
                     </li>
                 </ul>
                 
